--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "db:reset": "dotenv -e .env -- npx prisma migrate reset --force"
   },
   "dependencies": {
+    "@prisma/client": "^5.0.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^5.0.0",
-    "swagger-ui-express": "^4.6.3",
-    "@prisma/client": "^5.0.0",
-    "exceljs": "^4.4.0"
+    "swagger-ui-express": "^4.6.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.0"
