--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
+    "debug": "nodemon --inspect src/server.js",
     "prisma": "prisma",
     "generate": "npx prisma generate",
     "migrate": "npx prisma migrate dev",
@@ -22,6 +23,7 @@
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
+    "nanoid": "^5.1.5",
     "prisma": "^5.0.0",
     "swagger-ui-express": "^4.6.3"
   },
