--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "nanoid": "^5.1.5",
+    "nodemailer": "^6.10.1",
     "prisma": "^5.0.0",
     "swagger-ui-express": "^4.6.3"
   },
