--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   "devDependencies": {
     "eslint": "^9.29.0",
     "jest": "^30.0.3",
-    "nodemon": "^3.0.0"
+    "nodemon": "^3.0.0",
+    "supertest": "^7.1.4"
   },
   "author": "",
   "license": "MIT"
