script token google mail

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,20 @@
+# Database connection string
 DATABASE_URL=postgresql://user:password@localhost:5432/farminx
+# Port for the HTTP server
 PORT=3000
+# Secret key used to sign JWTs
 JWT_SECRET=changeme
+# Enable verbose debug logging
 DEBUG=false
+# Secret key for reCAPTCHA verification
 RECAPTCHA_SECRET_KEY=
+# Gmail account used for sending emails
+EMAIL_USER=
+# Email address shown as sender
+EMAIL_FROM=
+# OAuth2 client ID for Gmail
+GOOGLE_CLIENT_ID=
+# OAuth2 client secret for Gmail
+GOOGLE_CLIENT_SECRET=
+# OAuth2 refresh token for Gmail
+GOOGLE_REFRESH_TOKEN=
