--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.0.3",
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
+    "googleapis": "^156.0.0",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "nanoid": "^5.1.5",
